# 6

./: BUILD_WITH_GITHUB_ACTIONS.md  CMakeLists.txt  CODEX_PROMPT.md  README.md
.github/workflows/: windows-release.yml
docs/: pseudocode_from_decompile.cpp  reverse_engineering_notes.md
packaging/: 使用说明.txt
resources/: app.manifest
scripts/: build_release_local.ps1
src/: AudioPlayer.cpp  AudioPlayer.h  ClickController.cpp  ClickController.h  ConfigManager.cpp  ConfigManager.h  F2ClickerApp.cpp  F2ClickerApp.h  HotkeyManager.cpp  HotkeyManager.h  RuntimePaths.cpp  RuntimePaths.h  TimerOverlay.cpp  TimerOverlay.h  main.cpp
